# api/src/main/java/ru/kishko/api/dtos/CreditDto.java
@@ -1,27 +1,27 @@
-package ru.kishko.api.dtos;
-
-import lombok.*;
-import lombok.experimental.FieldDefaults;
-
-import java.math.BigDecimal;
-import java.util.List;
-
-@Getter
-@Setter
-@Builder
-@ToString
-@AllArgsConstructor
-@NoArgsConstructor
-@FieldDefaults(level = AccessLevel.PRIVATE)
-public class CreditDto {
-
-    BigDecimal amount;
-    Integer term;
-    BigDecimal monthlyPayment;
-    BigDecimal rate;
-    BigDecimal psk;
-    Boolean isInsuranceEnabled;
-    Boolean isSalaryClient;
-    List<PaymentScheduleElementDto> paymentSchedule;
-
-}
+//package ru.kishko.api.dtos;
+//
+//import lombok.*;
+//import lombok.experimental.FieldDefaults;
+//
+//import java.math.BigDecimal;
+//import java.util.List;
+//
+//@Getter
+//@Setter
+//@Builder
+//@ToString
+//@AllArgsConstructor
+//@NoArgsConstructor
+//@FieldDefaults(level = AccessLevel.PRIVATE)
+//public class CreditDto {
+//
+//    BigDecimal amount;
+//    Integer term;
+//    BigDecimal monthlyPayment;
+//    BigDecimal rate;
+//    BigDecimal psk;
+//    Boolean isInsuranceEnabled;
+//    Boolean isSalaryClient;
+//    List<PaymentScheduleElementDto> paymentSchedule;
+//
+//}
