# api/src/main/java/ru/kishko/api/dtos/PaymentScheduleElementDto.java
@@ -1,24 +1,24 @@
-package ru.kishko.api.dtos;
-
-import lombok.experimental.FieldDefaults;
-import lombok.*;
-
-
-import java.math.BigDecimal;
-import java.time.LocalDate;
-
-@Getter
-@Setter
-@Builder
-@ToString
-@AllArgsConstructor
-@NoArgsConstructor
-@FieldDefaults(level = AccessLevel.PRIVATE)
-public class PaymentScheduleElementDto {
-    Integer number;
-    LocalDate date;
-    BigDecimal totalPayment;
-    BigDecimal interestPayment;
-    BigDecimal debtPayment;
-    BigDecimal remainingDebt;
-}
+//package ru.kishko.api.dtos;
+//
+//import lombok.experimental.FieldDefaults;
+//import lombok.*;
+//
+//
+//import java.math.BigDecimal;
+//import java.time.LocalDate;
+//
+//@Getter
+//@Setter
+//@Builder
+//@ToString
+//@AllArgsConstructor
+//@NoArgsConstructor
+//@FieldDefaults(level = AccessLevel.PRIVATE)
+//public class PaymentScheduleElementDto {
+//    Integer number;
+//    LocalDate date;
+//    BigDecimal totalPayment;
+//    BigDecimal interestPayment;
+//    BigDecimal debtPayment;
+//    BigDecimal remainingDebt;
+//}
