# api/src/main/java/ru/kishko/api/enums/ApplicationStatus.java
@@ -1,13 +1,13 @@
-package ru.kishko.api.enums;
-
-public enum ApplicationStatus {
-    PREAPPROVAL,
-    APPROVED,
-    CC_DENIED,
-    CC_APPROVED,
-    PREPARE_DOCUMENTS,
-    DOCUMENT_CREATED,
-    CLIENT_DENIED,
-    DOCUMENT_SIGNED,
-    CREDIT_ISSUED
-}
+//package ru.kishko.api.enums;
+//
+//public enum ApplicationStatus {
+//    PREAPPROVAL,
+//    APPROVED,
+//    CC_DENIED,
+//    CC_APPROVED,
+//    PREPARE_DOCUMENTS,
+//    DOCUMENT_CREATED,
+//    CLIENT_DENIED,
+//    DOCUMENT_SIGNED,
+//    CREDIT_ISSUED
+//}
