# api/src/main/java/ru/kishko/api/enums/EmploymentPosition.java
@@ -1,8 +1,8 @@
-package ru.kishko.api.enums;
-
-public enum EmploymentPosition {
-    WORKER,
-    OWNER,
-    TOP_MANAGER,
-    MID_MANAGER
-}
+//package ru.kishko.api.enums;
+//
+//public enum EmploymentPosition {
+//    WORKER,
+//    OWNER,
+//    TOP_MANAGER,
+//    MID_MANAGER
+//}
