# api/src/main/java/ru/kishko/api/enums/EmploymentStatus.java
@@ -1,8 +1,8 @@
-package ru.kishko.api.enums;
-
-public enum EmploymentStatus {
-    UNEMPLOYED,
-    EMPLOYED,
-    SELF_EMPLOYED,
-    BUSINESS_OWNER
-}
+//package ru.kishko.api.enums;
+//
+//public enum EmploymentStatus {
+//    UNEMPLOYED,
+//    EMPLOYED,
+//    SELF_EMPLOYED,
+//    BUSINESS_OWNER
+//}
