# calculator/src/main/java/ru/kishko/calculator/controllers/CalculatorController.java
@@ -5,36 +5,34 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
-import ru.kishko.api.dtos.CreditDto;
-import ru.kishko.api.dtos.LoanOfferDto;
-import ru.kishko.api.dtos.LoanStatementRequestDto;
-import ru.kishko.api.dtos.ScoringDataDto;
 import ru.kishko.calculator.services.CalculatorCreditService;
 import ru.kishko.calculator.services.CalculatorOfferService;
+import ru.kishko.openapi.api.CalculatorApi;
+import ru.kishko.openapi.model.CreditDto;
+import ru.kishko.openapi.model.LoanOfferDto;
+import ru.kishko.openapi.model.LoanStatementRequestDto;
+import ru.kishko.openapi.model.ScoringDataDto;
 
-import javax.validation.Valid;
 import java.util.List;
 
 @Slf4j
 @CrossOrigin
 @RestController
 @RequiredArgsConstructor
-@RequestMapping("/calculator")
-public class CalculatorController {
+public class CalculatorController implements CalculatorApi {
 
     private final CalculatorOfferService calculatorService;
     private final CalculatorCreditService creditService;
-
-    @PostMapping("/offers")
-    public ResponseEntity<List<LoanOfferDto>> calculateLoanOffers(@RequestBody @Valid LoanStatementRequestDto request) {
-        log.info("Received loan offer request: {}", request); // Логирование запроса
-        return new ResponseEntity<>(calculatorService.calculateLoanOffers(request), HttpStatus.OK);
-    }
-
-    @PostMapping("/calc")
-    public ResponseEntity<CreditDto> calculateCredit(@RequestBody @Valid ScoringDataDto request) {
+    @Override
+    public ResponseEntity<CreditDto> calculatorCalcPost(ScoringDataDto request) {
         log.info("Received credit request: {}", request); // Логирование запроса
         return new ResponseEntity<>(creditService.calculateCredit(request), HttpStatus.OK);
+    }
+
+    @Override
+    public ResponseEntity<List<LoanOfferDto>> calculatorOffersPost(LoanStatementRequestDto request) {
+        log.info("Received loan offer request: {}", request); // Логирование запроса
+        return new ResponseEntity<>(calculatorService.calculateLoanOffers(request), HttpStatus.OK);
     }
 
 }
